--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="crash">Crash</string>
+    <string name="email_question">It looks like you\'re trying to send an email. Can I help with that?</string>
+    <string name="cancel">NO!</string>
+    <string name="clippy">clippy</string>
 </resources>
