Implement a RUM OkHttp3 Interceptor (#24)
* Implementation of a RUM okhttp interceptor

* update the sample app to properly use live data to update the UI

* extract a couple of test variables, for clarity.

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="email_question">It looks like you\'re trying to send an email. Can I help with that?</string>
     <string name="cancel">NO!</string>
     <string name="clippy">clippy</string>
+    <string name="http_me_up">HTTP me up!</string>
 </resources>
