Handle exceptions that occur while making okhttp calls. (#28)
* Handle exceptions that occur while making okhttp calls.
This is necessary since zipkin swallows event attributes, and we lose the details from the otel instrumentation.

* add attribute copies for the RUM UI/backend

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="cancel">NO!</string>
     <string name="clippy">clippy</string>
     <string name="http_me_up">HTTP me up!</string>
+    <string name="http_me_bad">Http Error</string>
+    <string name="http_not_found">HTTP Not Found</string>
 </resources>
