Implement span exporting limits (#45)
* Implement span exporting limits

* license

* Add demo usage to sample app

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="http_me_up">HTTP me up!</string>
     <string name="http_me_bad">Http Error</string>
     <string name="http_not_found">HTTP Not Found</string>
+
+    <string name="start_spam">Spam start!</string>
+    <string name="stop_spam">Spam stop</string>
+    <string name="spam_status">Created %d spans</string>
 </resources>
