Implement very basic ANR detection and reporting. (#78)
* Implement very basic ANR detection and reporting.
And add a button to the sample app to demo.

* ping the main thread, rather than just looking for state

* Robustify the ANR detection to actually use the main thread for a miniscule amount of work.

* a little code de-nesting

* Add some additional test code to make sure we don't over-report the ANR status

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="start_spam">Spam start!</string>
     <string name="stop_spam">Spam stop</string>
     <string name="spam_status">Created %d spans</string>
+    <string name="freeze">Freeze!</string>
 </resources>
