--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="stop_spam">Spam stop</string>
     <string name="spam_status">Created %d spans</string>
     <string name="freeze">Freeze!</string>
+    <string name="work_it">Work it!</string>
 </resources>
