Add a Chrome custom tab to the app and a timer to time how long the user visits it. (#89)
* playing with chrome custom tabs

* Add a chrome custom tab, and a timer to times how long it was visited.

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="spam_status">Created %d spans</string>
     <string name="freeze">Freeze!</string>
     <string name="work_it">Work it!</string>
+    <string name="custom_tab">Chrome</string>
 </resources>
