--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="http_me_bad">Http Error</string>
     <string name="http_not_found">HTTP Not Found</string>
 
+    <string name="local_web_view">Local WebView</string>
+    <string name="web_view">WebView</string>
     <string name="start_spam">Spam start!</string>
     <string name="stop_spam">Spam stop</string>
     <string name="spam_status">Created %d spans</string>
