Volley example and readme (#329)
* allow case insensitive header search

* Add simple Volley example to the sample app

* starting readme

* bulk out volley readme

* spotless

* spotless

* Update splunk-otel-android-volley/README.md

Co-authored-by: Mateusz Rzeszutek <mrzeszutek@splunk.com>

* return all case insensitive matching headers

* null guard

* readme improvements

* remove initial size

Co-authored-by: Mateusz Rzeszutek <mrzeszutek@splunk.com>

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="clippy">clippy</string>
     <string name="http_me_up">HTTP me up!</string>
     <string name="http_me_bad">Http Error</string>
+    <string name="volley_client">Volley HTTP</string>
     <string name="http_not_found">HTTP Not Found</string>
 
     <string name="local_web_view">Local WebView</string>
