--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="app_name">hello_otel</string>
-  <string name="action_settings">Settings</string>
+  <string name="action_settings">Show Uber Trace Id</string>
   <!-- Strings used for fragments for navigation -->
   <string name="first_fragment_label">First Fragment</string>
   <string name="second_fragment_label">Second Fragment</string>
