Add logout status

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
-  <string name="app_name">hello_otel</string>
-  <string name="action_show_log">Show Log</string>
-  <string name="action_log_out">Log out</string>
-  <!-- Strings used for fragments for navigation -->
-  <string name="login_action_label">Log In </string>
-  <string name="check_in_action_label">Check In</string>
-  <string name="next">Next</string>
-  <string name="previous">Previous</string>
-  <string name="check_in">Check In</string>
-  <string name="log_in_success">Log In</string>
-  <string name="log_in_failure">Log In Failure</string>
-  <string name="check_in_status">To Be Checked In</string>
-  <string name="action_log_history">Action Log…</string>
-  <string name="check_out">Check out</string>
+    <string name="app_name">HelloOtel</string>
+    <string name="action_show_log">Show Log</string>
+    <string name="action_log_out">Log out</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="login_action_label">Log In </string>
+    <string name="check_in_action_label">Check In</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="check_in">Check In</string>
+    <string name="log_in_success">Log In</string>
+    <string name="log_in_failure">Log In Failure</string>
+    <string name="check_in_status">To Be Checked In</string>
+    <string name="action_log_history">Action Log…</string>
+    <string name="check_out">Check out</string>
 </resources>
