populate the session id on screen and set up cart

--- a/demo-app/src/main/res/values/strings.xml
+++ b/demo-app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="title_activity_astronomy_shop">AstronomyShopActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_cart">Cart</string>
 </resources>
