--- a/demo-app/src/main/res/values/strings.xml
+++ b/demo-app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_cart">Cart</string>
+    <string name="title_exit_to_main">Exit</string>
 </resources>
