Progress on demo app (#414)
* make text selectable

* add ability to exit back to main activity

* skel up a fake products client and rename home to shop and make compose

* load product list to shop

* demo app tweaks

* create product cards

* cleanup

--- a/demo-app/src/main/res/values/strings.xml
+++ b/demo-app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">OpenTelemetryDemoApp</string>
     <string name="title_activity_astronomy_shop">AstronomyShopActivity</string>
-    <string name="title_home">Home</string>
+    <string name="title_shop">OpenTelemetry Astronomy Shop</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_cart">Cart</string>
+    <string name="title_exit_to_main">Exit</string>
 </resources>
