Demo app: activity with fragments (#570)
* refactored packages to make more sense with the fragment activity

* added new activity "AboutActicity" which purpose is to display fragment lifecycle instrumentation and 2 fragments within it. Creted buttom nav menu to navigate between these fragments and to return to main activity. Added a "Learn more" button to main activity that launches the About Activity.

* added some content to the AppFeaturesFragment

* set contentDescription for an image to avoid warnings

* added some content for the AboutOpenTelemetryFragment, for now hard written into the layout file.

* made unnecessarily global vars local

* changed activities' labels

* changed button name from OpentStore to Launcher

--- a/demo-app/src/main/res/values/strings.xml
+++ b/demo-app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_cart">Cart</string>
     <string name="title_exit_to_main">Exit</string>
+    <string name="exit">Exit</string>
+    <string name="app_features">App Features</string>
+    <string name="about_opentelemetry">About OpenTelemetry</string>
+    <string name="expand_or_collapse_content">Expand or collapse content</string>
 </resources>
